# spec-kit-assistant

./: .c8rc.json  .env.example  .eslintrc.json  .gitignore  AGENT_SWARM_ACCELERATED_TIMELINE.md  AGENT_SWARM_ACCELERATION_README.md  ASCII_ANIMATIONS_README.md  BASH-COMMANDS.md  CHROME_MCP_DEMO_SCRIPT.md  CLAUDE.md  CODE_ANALYSIS.md  COMMANDS.md  CONSTITUTION.md  CURRENT-STATE.md  Dockerfile  FOCUS_MANAGEMENT_USAGE.md  GHOSTTY_ASCII_ANIMATION_INTEGRATION_SPEC.md  GITHUB_INTEGRATION_SPEC.md  GITHUB_SETUP.md  HONEST_STATUS.md  IMPLEMENTATION_SPEC.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_AGENT_SWARM_ARCHITECTURE.md  LOGO.txt  MANUAL-PUSH.md  NEXT-STEPS.md  OVERNIGHT-SECURITY-WORK-SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SPEC.md  PRODUCTION_TODO.md  PUSH-TO-GITHUB.sh  README-ASSISTANT.md  README.md  RED_TEAM_SECURITY_REPORT.md  ROADMAP-SUMMARY.md  ROADMAP.md  SCAFFOLD-ETH-INTEGRATION.md  SECURITY-FIX-SUMMARY.md  SECURITY-IMPROVEMENTS.md  (+80 more)
.speckit/: session.json
SPEC;rmrf/: .md
Your-Little-Helper/: constitution.md
agents/: swarm-coordinator.js  test-agent.js
archive/: README.md
branding/: spec-banner.md  spec-logo-design.md
docs/: docfx.json  warp-integration-assessment.md
hooks/: update-progress.sh  validate-against-spec.sh
notes/: side-quests.md
scripts/: build.js  install.sh
specs/: IMPLEMENTATION.md  PROBLEM.md  README.md  SOLUTION.md  SPECIFICATION.md  implementation-checklist.json  progress-tracking.json  ralph-integration-plan.md  ralph-integration-spec.md  ralph-integration-tasks.md  task-assignment.json
src/: index.js
test/: basic-functionality.test.js  basic-smoke.test.js  basic.test.js  guided-ux.test.js  minimal.test.js  production.test.js  red-team-exploits.test.js  red-team-penetration.test.js  red-team-security.test.js  red-team-warrior.test.js  (+3 more)
(+324 files in other folders)
